--- a/index.html
+++ b/index.html
@@ -3,28 +3,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MRBB</title>
-
-    <!-- build:[href] assets/styles/index.min.css -->
-    <!-- <link rel="stylesheet" href="assets/styles/index.css"> -->
-    <!-- /build -->
-
-    <!-- build:[src] assets/js/source.min.js -->
-    <!-- <script data-main="assets/js/main", src="vendor/requirejs/require.js"></script> -->
-    <!-- /build -->
-
-    <script src="dist/bundle.js"></script>
-
+    <title>Process</title>
   </head>
 
   <body>
-
-    <div id="wrap">
-      <div id="header-region"></div>
-      <div id="main-region"></div>
-      <div id="dialog-region"></div>
-    </div><!-- #wrap -->
-
+    <div id="main"></div>
+    <script src="dist/application.js"></script>
   </body>
 
 </html>
